Ignore 3rdPary, Build, junk and CMakeFiles.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 .sw[a-z]
 tags
 tegra/
+
+# Temporarily disable this to commit 3rdParty files.
+3rdparty/*
+Build/*
+junk/*
+CMakeFiles/*
+CMakeCache.txt
