Fix Cuda -Wl linker options
This line causes the following error when building custom projects that use OpenCV beta 3:
ld: warning: directory not found for option '-L/<project_root>/-Wl,/usr/local/cuda'

--- a/cmake/templates/OpenCVConfig.cmake.in
+++ b/cmake/templates/OpenCVConfig.cmake.in
@@ -292,7 +292,9 @@ foreach(__opttype OPT DBG)
     set(OpenCV_CUDA_LIBS_RELPATH "")
     foreach(l ${OpenCV_CUDA_LIBS_ABSPATH})
       get_filename_component(_tmp ${l} PATH)
-      list(APPEND OpenCV_CUDA_LIBS_RELPATH ${_tmp})
+      if(NOT ${_tmp} MATCHES "-Wl.*")
+          list(APPEND OpenCV_CUDA_LIBS_RELPATH ${_tmp})
+      endif()
     endforeach()
 
     list(REMOVE_DUPLICATES OpenCV_CUDA_LIBS_RELPATH)
