Doxygen documentation: flann, photo and stitching modules

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -241,7 +241,8 @@ PREDEFINED             = __cplusplus=1 \
                          CV_INLINE= \
                          CV_NORETURN= \
                          CV_DEFAULT(x)=" = x" \
-                         CV_NEON=1
+                         CV_NEON=1 \
+                         FLANN_DEPRECATED=
 EXPAND_AS_DEFINED      =
 SKIP_FUNCTION_MACROS   = YES
 TAGFILES               =
