Doxygen documentation: BiB references and fixes

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -166,20 +166,27 @@ if(BUILD_DOCS AND HAVE_DOXYGEN)
   set(paths_include)
   set(paths_doc)
   set(paths_bib)
+  set(deps)
   foreach(m ${BASE_MODULES} ${EXTRA_MODULES})
     list(FIND blacklist ${m} _pos)
     if(${_pos} EQUAL -1)
+      # include folder
       set(header_dir "${OPENCV_MODULE_opencv_${m}_LOCATION}/include")
       if(EXISTS "${header_dir}")
         list(APPEND paths_include "${header_dir}")
+        list(APPEND deps ${header_dir})
       endif()
+      # doc folder
       set(docs_dir "${OPENCV_MODULE_opencv_${m}_LOCATION}/doc")
       if(EXISTS "${docs_dir}")
         list(APPEND paths_doc "${docs_dir}")
-        file(GLOB bib_file "${docs_dir}" "*.bib")
-        if(EXISTS "${bib_file}")
-          list(APPEND paths_bib "${bib_file}")
-        endif()
+        list(APPEND deps ${docs_dir})
+      endif()
+      # BiBTeX file
+      set(bib_file "${docs_dir}/${m}.bib")
+      if(EXISTS "${bib_file}")
+        set(paths_bib "${paths_bib} ${bib_file}")
+        list(APPEND deps ${bib_file})
       endif()
     endif()
   endforeach()
@@ -204,10 +211,11 @@ if(BUILD_DOCS AND HAVE_DOXYGEN)
   configure_file(Doxyfile.in ${doxyfile} @ONLY)
   configure_file(root.markdown.in ${rootfile} @ONLY)
   configure_file(mymath.sty "${CMAKE_DOXYGEN_OUTPUT_PATH}/html/mymath.sty" @ONLY)
+  configure_file(mymath.sty "${CMAKE_DOXYGEN_OUTPUT_PATH}/latex/mymath.sty" @ONLY)
 
   add_custom_target(doxygen
     COMMAND ${DOXYGEN_BUILD} ${doxyfile}
-    DEPENDS ${doxyfile} ${all_headers} ${all_images})
+DEPENDS ${doxyfile} ${rootfile} ${bibfile} ${deps})
 endif()
 
 if(HAVE_DOC_GENERATOR)
