--- a/apps/haartraining/CMakeLists.txt
+++ b/apps/haartraining/CMakeLists.txt
@@ -14,8 +14,6 @@ if(WIN32)
   link_directories(${CMAKE_CURRENT_BINARY_DIR})
 endif()
 
-link_libraries(${OPENCV_HAARTRAINING_DEPS} opencv_haartraining_engine)
-
 # -----------------------------------------------------------
 #  Library
 # -----------------------------------------------------------
@@ -41,52 +39,35 @@ set_target_properties(opencv_haartraining_engine PROPERTIES
                       RUNTIME_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}
                       INSTALL_NAME_DIR lib
                      )
-
-# -----------------------------------------------------------
-#  haartraining
-# -----------------------------------------------------------
-
-add_executable(opencv_haartraining cvhaartraining.h haartraining.cpp)
-set_target_properties(opencv_haartraining PROPERTIES
-                      DEBUG_POSTFIX "${OPENCV_DEBUG_POSTFIX}"
-                      OUTPUT_NAME "opencv_haartraining")
-
-# -----------------------------------------------------------
-#  createsamples
-# -----------------------------------------------------------
-
-add_executable(opencv_createsamples cvhaartraining.h createsamples.cpp)
-set_target_properties(opencv_createsamples PROPERTIES
-                      DEBUG_POSTFIX "${OPENCV_DEBUG_POSTFIX}"
-                      OUTPUT_NAME "opencv_createsamples")
-
-# -----------------------------------------------------------
-#  performance
-# -----------------------------------------------------------
-add_executable(opencv_performance performance.cpp)
-set_target_properties(opencv_performance PROPERTIES
-                      DEBUG_POSTFIX "${OPENCV_DEBUG_POSTFIX}"
-                      OUTPUT_NAME "opencv_performance")
-
-# -----------------------------------------------------------
-#  Install part
-# -----------------------------------------------------------
-
-if(INSTALL_CREATE_DISTRIB)
-  if(BUILD_SHARED_LIBS)
-    install(TARGETS opencv_haartraining RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} CONFIGURATIONS Release COMPONENT dev)
-    install(TARGETS opencv_createsamples RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} CONFIGURATIONS Release COMPONENT dev)
-    install(TARGETS opencv_performance RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} CONFIGURATIONS Release COMPONENT dev)
-  endif()
-else()
-  install(TARGETS opencv_haartraining RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} COMPONENT dev)
-  install(TARGETS opencv_createsamples RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} COMPONENT dev)
-  install(TARGETS opencv_performance RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} COMPONENT dev)
-endif()
+target_link_libraries(opencv_haartraining_engine ${OPENCV_HAARTRAINING_DEPS})
 
 if(ENABLE_SOLUTION_FOLDERS)
-  set_target_properties(opencv_performance PROPERTIES FOLDER "applications")
-  set_target_properties(opencv_createsamples PROPERTIES FOLDER "applications")
-  set_target_properties(opencv_haartraining PROPERTIES FOLDER "applications")
   set_target_properties(opencv_haartraining_engine PROPERTIES FOLDER "applications")
 endif()
+
+# -----------------------------------------------------------
+#  apps
+# -----------------------------------------------------------
+
+foreach(app haartraining createsamples performance)
+  # Executable
+  add_executable(opencv_${app} cvhaartraining.h ${app}.cpp)
+  target_link_libraries(opencv_${app} opencv_haartraining_engine ${OPENCV_HAARTRAINING_DEPS})
+  set_target_properties(opencv_${app} PROPERTIES
+                        DEBUG_POSTFIX "${OPENCV_DEBUG_POSTFIX}"
+                        OUTPUT_NAME "opencv_${app}")
+
+  # Install
+  if(INSTALL_CREATE_DISTRIB)
+    if(BUILD_SHARED_LIBS)
+      install(TARGETS opencv_${app} RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} CONFIGURATIONS Release COMPONENT dev)
+    endif()
+  else()
+    install(TARGETS opencv_${app} RUNTIME DESTINATION ${OPENCV_BIN_INSTALL_PATH} COMPONENT dev)
+  endif()
+
+  # IDE
+  if(ENABLE_SOLUTION_FOLDERS)
+    set_target_properties(opencv_${app} PROPERTIES FOLDER "applications")
+  endif()
+endforeach()
