--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -285,3 +285,4 @@ DOT_TRANSPARENT        = NO
 DOT_MULTI_TARGETS      = NO
 GENERATE_LEGEND        = YES
 DOT_CLEANUP            = YES
+@CMAKE_DOXYGEN_PLANTUML_SUPPORT@
