Added Qt help generation support

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -129,6 +129,11 @@ if(BUILD_DOCS AND DOXYGEN_FOUND)
   set(CMAKE_DOXYGEN_MAIN_REFERENCE "${refs_main}")
   set(CMAKE_DOXYGEN_EXTRA_REFERENCE "${refs_extra}")
   set(CMAKE_EXTRA_BIB_FILES "${bibfile} ${paths_bib}")
+  if (CMAKE_DOXYGEN_GENERATE_QHP)
+    set(CMAKE_DOXYGEN_GENERATE_QHP "YES")
+  else()
+    set(CMAKE_DOXYGEN_GENERATE_QHP "NO")
+  endif()
 
   list(APPEND CMAKE_DOXYGEN_HTML_FILES "${CMAKE_CURRENT_SOURCE_DIR}/opencv.ico")
   list(APPEND CMAKE_DOXYGEN_HTML_FILES "${CMAKE_CURRENT_SOURCE_DIR}/pattern.png")
