--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -148,10 +148,10 @@ GENERATE_CHI           = NO
 CHM_INDEX_ENCODING     =
 BINARY_TOC             = NO
 TOC_EXPAND             = NO
-GENERATE_QHP           = NO
-QCH_FILE               =
-QHP_NAMESPACE          = org.doxygen.Project
-QHP_VIRTUAL_FOLDER     = doc
+GENERATE_QHP           = @CMAKE_DOXYGEN_GENERATE_QHP@
+QCH_FILE               = ../opencv-@OPENCV_VERSION@.qch
+QHP_NAMESPACE          = org.itseez.opencv.@OPENCV_VERSION@
+QHP_VIRTUAL_FOLDER     = opencv
 QHP_CUST_FILTER_NAME   =
 QHP_CUST_FILTER_ATTRS  =
 QHP_SECT_FILTER_ATTRS  =
