Fixed installation of CMakeLists.txt and enabled GPU samples build in stand alone version.

--- a/samples/gpu/CMakeLists.txt
+++ b/samples/gpu/CMakeLists.txt
@@ -101,8 +101,7 @@ if(BUILD_EXAMPLES AND OCV_DEPENDENCIES_FOUND)
 endif()
 
 if (OCV_DEPENDENCIES_FOUND AND INSTALL_C_EXAMPLES AND NOT WIN32)
-  file(GLOB install_list *.c *.cpp *.jpg *.png *.data makefile.* build_all.sh *.dsp *.cmd )
-  message(" install_list: ${install_list}")
+  file(GLOB install_list *.c *.cpp *.jpg *.png *.data makefile.* build_all.sh *.dsp *.cmd *.txt)
   if(NOT HAVE_OPENGL)
     list_filterout(install_list ".*opengl.cpp")
   endif()
