--- a/samples/gpu/performance/CMakeLists.txt
+++ b/samples/gpu/performance/CMakeLists.txt
@@ -27,7 +27,7 @@ if(WIN32)
 endif()
 
 if(INSTALL_C_EXAMPLES AND NOT WIN32)
-  file(GLOB GPU_FILES performance/*.cpp performance/*.h)
+  file(GLOB GPU_FILES performance/*.cpp performance/*.h performance/CMakeLists.txt)
   install(FILES ${GPU_FILES}
           DESTINATION ${OPENCV_SAMPLES_SRC_INSTALL_PATH}/gpu/performance
           PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
