Android 5 support and aarch64-related fixes for Android Manager.

--- a/platforms/android/libinfo/CMakeLists.txt
+++ b/platforms/android/libinfo/CMakeLists.txt
@@ -10,6 +10,8 @@ if(NOT ANDROID_PACKAGE_PLATFORM)
     else()
       set(ANDROID_PACKAGE_PLATFORM armv7a)
     endif()
+  elseif(ARM64_V8A)
+    set(ANDROID_PACKAGE_PLATFORM aarch64)
   elseif(ARMEABI_V6)
     set(ANDROID_PACKAGE_PLATFORM armv6)
   elseif(ARMEABI)
