fix annotation tool, add auto make of tool

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,3 +2,4 @@ link_libraries(${OPENCV_LINKER_LIBS})
 
 add_subdirectory(haartraining)
 add_subdirectory(traincascade)
+add_subdirectory(annotation)
